# polymarket-copy-trading

./: .env.example  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: POLYMARKET_COPY_TRADING.ipynb
src/polymarket_copy_trading/: __init__.py  main.py
src/polymarket_copy_trading/DI/: __init__.py  container.py
src/polymarket_copy_trading/clients/: __init__.py  clob_client.py  data_api.py  gamma_api.py  gamma_cache.py  http.py
src/polymarket_copy_trading/clients/clob_client/: __init__.py  clob_client.py  schema.py
src/polymarket_copy_trading/config/: __init__.py  config.py
src/polymarket_copy_trading/consumers/: __init__.py  trade_consumer.py
src/polymarket_copy_trading/events/: __init__.py  bus.py
src/polymarket_copy_trading/exceptions/: __init__.py  exceptions.py  queue_exceptions.py
src/polymarket_copy_trading/logging/: __init__.py  config.py
src/polymarket_copy_trading/models/: __init__.py  bot_position.py  seen_trade.py  tracking_ledger.py  tracking_session.py  trade.py
src/polymarket_copy_trading/notifications/: __init__.py  notification_manager.py  types.py
src/polymarket_copy_trading/persistence/: __init__.py
src/polymarket_copy_trading/queue/: __init__.py  base.py  in_memory_queue.py  messages.py
src/polymarket_copy_trading/services/: __init__.py  tracking.py  tracking_runner.py
src/polymarket_copy_trading/utils/: __init__.py  dedupe.py  validation.py
tests/: conftest.py
tests/unit/models/: test_bot_position.py
tests/unit/utils/: test_dedupe.py
(+61 files in other folders)
