[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-copy-trading"
version = "0.0.1"
description = "Copy trading bot for Polymarket."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Mario Jesús Arias Hernández" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["polymarket_copy_trading*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["UP009", "UP017", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
files = ["src"]
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_configs = true
pretty = true
show_error_codes = true
